syntax = "proto3";

package permission.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/duration.proto";

import "pagination/v1/pagination.proto";


// Permission Change Audit Log Service
service PermissionAuditLogService {
  // List permission change audit logs
  rpc List (pagination.PagingRequest) returns (ListPermissionAuditLogResponse) {}

  // Get permission change audit log details
  rpc Get (GetPermissionAuditLogRequest) returns (PermissionAuditLog) {}

  // Create permission change audit log
  rpc Create (CreatePermissionAuditLogRequest) returns (google.protobuf.Empty) {}
}

// Permission Change Audit Log
message PermissionAuditLog {
  // Change action type
  enum ActionType {
    ACTION_TYPE_UNSPECIFIED = 0;

    GRANT = 1;    // Grant permission/role
    REVOKE = 2;   // Revoke permission/role
    UPDATE = 3;   // Update permission attributes (e.g., expiration time, constraints)
    RESET = 4;    // Reset permission
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "Permission change audit log ID"}
  ]; // Permission change audit log ID

  optional uint32 tenant_id = 2 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "Tenant ID"}
  ];  // Tenant ID

  optional uint32 operator_id = 3 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "Operator user ID"}
  ]; // Operator user ID

  optional string operator_name = 4 [
    json_name = "operatorName",
    (gnostic.openapi.v3.property) = {description: "Operator username"}
  ]; // Operator username


  optional string target_type = 10 [
    json_name = "targetType",
    (gnostic.openapi.v3.property) = {description: "Target type"}
  ]; // Target type

  optional string target_id = 11 [
    json_name = "targetId",
    (gnostic.openapi.v3.property) = {description: "Target ID"}
  ]; // Target ID

  optional string target_name = 12 [
    json_name = "targetName",
    (gnostic.openapi.v3.property) = {description: "Target name"}
  ]; // Target name


  optional ActionType action = 20 [
    json_name = "action",
    (gnostic.openapi.v3.property) = {description: "Change action"}
  ]; // Change action


  optional string old_value = 30 [
    json_name = "oldValue",
    (gnostic.openapi.v3.property) = {description: "Old value"}
  ]; // Old value

  optional string new_value = 31 [
    json_name = "newValue",
    (gnostic.openapi.v3.property) = {description: "New value"}
  ]; // New value


  optional string ip_address = 40 [
    json_name = "ipAddress",
    (gnostic.openapi.v3.property) = {description: "Operator IP address"}
  ]; // Operator IP address

  optional string request_id = 41 [
    json_name = "requestId",
    (gnostic.openapi.v3.property) = {description: "Associated global request ID"}
  ]; // Associated global request ID

  optional string reason = 42 [
    json_name = "reason",
    (gnostic.openapi.v3.property) = {description: "Change reason"}
  ]; // Change reason

  // ========== Compliance Validation ==========

  optional string log_hash = 50 [
    json_name = "logHash",
    (gnostic.openapi.v3.property).description = "Log content hash (SHA256, hex string)"
  ]; // Log hash

  optional bytes signature = 51 [
    json_name = "signature",
    (gnostic.openapi.v3.property).description = "Log digital signature (ECDSA, signed content: tenant_id+user_id+created_at+log_hash)"
  ]; // Log digital signature

  // ========== Time Fields ==========

  optional google.protobuf.Timestamp created_at = 60 [
    json_name = "createdAt",
    (gnostic.openapi.v3.property) = {description: "Log created time"}
  ];// Log created time
}

// List permission change audit logs response
message ListPermissionAuditLogResponse {
  repeated PermissionAuditLog items = 1;
  uint64 total = 2;
}

// Get permission change audit log details request
message GetPermissionAuditLogRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field mask for controlling returned fields"
    }
  ]; // View field mask for controlling returned fields
}

// Create permission change audit log request
message CreatePermissionAuditLogRequest {
  PermissionAuditLog data = 1;
}
